# ProDroneTasks

./: .gitignore  README.md
PCL_Tuto/: CMakeLists.txt
PCL_Tuto/pcd/: object_templates.txt  train_cat.pcd  train_lioness.pcd  train_michael.pcd
PCL_Tuto/src/Basic/: matrix_transform.cpp
PCL_Tuto/src/Features/: moment_of_inertia.cpp  normal_estimation_using_internal_images.cpp
PCL_Tuto/src/Filtering/: passthrough.cpp  project_inliers.cpp  remove_outliers.cpp  statistical_removal.cpp  voxel_grid.cpp
PCL_Tuto/src/IO/: concatenate_clouds.cpp  pcd_read.cpp  pcd_write.cpp
PCL_Tuto/src/Octree/: octree_change_detection_bun0.cpp  octree_search.cpp
PCL_Tuto/src/Range_Images/: range_border_extraction.cpp
PCL_Tuto/src/Recognition/: correspondance_grouping.cpp
PCL_Tuto/src/Registration/: normal_distribution_transform.cpp
PCL_Tuto/src/Segmentation/: cluster_extraction.cpp  color_based_region_growing.cpp  cylinder_segmentation.cpp  min_cut_segmentation.cpp  planar_segmentation.cpp  region_growing.cpp
PCL_Tuto/src/Surface/: concave_hull_2d.cpp  greedy_projection.cpp  resampling.cpp  triangulation.cpp
PCL_Tuto/src/Visualization/: cloud_viewer.cpp
catkin_ws/src/image_transport_tutorial/: CMakeLists.txt
catkin_ws/src/image_transport_tutorial/src/: my_publisher.cpp  my_subscriber.cpp
catkin_ws/src/image_transport_tutorial/srv/: TakeSnapshot.srv
catkin_ws/src/signal_handling/: CMakeLists.txt  package.xml
catkin_ws/src/signal_handling/include/signal_handling/: handler.hpp  sender.hpp
catkin_ws/src/signal_handling/src/: handler.cpp  sender.cpp
catkin_ws/src/task3/: CMakeLists.txt  package.xml
catkin_ws/src/task3/src/: converter.cpp  input.cpp  publisher.cpp  translator.cpp
catkin_ws/src/task4/: CMakeLists.txt  package.xml
catkin_ws/src/task4/src/: thread_client.cpp  thread_server.cpp
catkin_ws/src/task4/srv/: Delay.srv
task2/: CMakeLists.txt
task2/src/: logger.cpp  main.cpp
task2/tests/: gtest.cpp
